# Research_Agent

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: graph.py  model.py  outliner.py  planner.py  report_compiler.py  type_state.py  writer.py
static/: index.html
utils/: pdf_generator.py
